# mytime

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  build.sh
.github/workflows/: tests.yml
src/: cli.rs  config.rs  lib.rs  main.rs  modify.rs  reopen.rs  show.rs  start.rs  stop.rs  task.rs  utils.rs
src/core/: config.rs  errors.rs  mod.rs  task.rs  tests.rs  todo.rs  utils.rs
src/db/: mod.rs  sqlite.rs  traits.rs
src/integrations/: mod.rs  redmine.rs  traits.rs
src/ui/: cli.rs  cmd.rs  mod.rs  modify.rs  reopen.rs  show.rs  start.rs  stop.rs  traits.rs
src/ui/actions/: add_todo.rs  edit.rs  mark_todo.rs  mod.rs  modify.rs  reopen.rs  report.rs  send.rs  show.rs  start.rs  stop.rs  todo_to_task.rs  traits.rs
