[package]
name = "mytime"
version = "0.1.1"
edition = "2021"
authors = ["Francesc Arpí Roca"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.25"
clap = { version = "4.3.0", features = ["derive"] }
comfy-table = "6.2.0"
ini = "1.3.0"
rusqlite = "0.29.0"
