[package]
name = "mytime"
version = "0.1.2"
edition = "2021"
authors = ["Francesc Arpí Roca"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.25"
clap = { version = "4.3.0", features = ["derive"] }
comfy-table = "6.2.0"
oxhttp = { version = "0.1.6", features = ["native-tls"]}
rusqlite = "0.29.0"
rust-ini = "0.19.0"
serde_json = "1.0.96"
serde = { version = "1.0", features = ["derive"] }
